--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,11 @@
 /* General */
-main{
+main {
     display: flex;
     flex-direction: column;
     gap: 40px;
     margin: 40px 0;
 }
+
 h3 {
     font-size: 30px;
     text-align: center;
@@ -22,7 +23,7 @@ span {
     font-family: "Raleway", serif;
 }
 
-ol{
+ol {
     list-style: none;
     padding: 0;
 }
@@ -33,14 +34,25 @@ article {
     margin-bottom: 30px;
 }
 
+button {
+    border-radius: 5px !important;
+    padding: 10px;
+    font-weight: 600;
+    border: none;
+}
+
 footer {
     text-align: center;
     font-size: 20px;
     background-color: #FFDDAE;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
 }
 
-footer a:hover {
+footer a {
     color: black;
+    text-decoration: none;
 }
 
 /*Menú*/
@@ -50,9 +62,11 @@ footer a:hover {
     align-items: center;
     gap: 5px;
 }
-nav.navbar.navbar-expand-lg.bg-body-tertiary{
-    background-color: #C6E7FF!important;
+
+nav.navbar.navbar-expand-lg.bg-body-tertiary {
+    background-color: #C6E7FF !important;
 }
+
 .navbar-brand img {
     height: 50px;
     width: 50px;
@@ -78,14 +92,14 @@ header {
     font-family: "Raleway", serif;
 }
 
-h1{
+h1 {
     text-align: center;
 }
 
 /*Inicio*/
 
 .imagen-presentacion img,
-.mapa iframe{
+.mapa iframe {
     width: 100%;
     border-radius: 10px;
 }
@@ -97,25 +111,39 @@ h1{
     text-align: center;
 }
 
-.redes{
+.boton-inicio,
+.boton-donaciones {
+    background-color: #FFDDAE;
+    width: fit-content;
+    align-self: center;
+}
+
+.boton-inicio a,
+.boton-donaciones a {
+    color: black;
+    text-decoration: none;
+}
+
+
+.redes {
     width: 100%;
     height: 150px;
 }
 
-.redes a, 
-.redes a img{
+.redes a,
+.redes a img {
     height: 100%;
 }
 
 /*Adopciones y perdidos*/
 .adopciones .row,
-.perdidos .row{
+.perdidos .row {
     gap: 20px;
     margin: 20px 0;
     justify-content: center;
 }
 
-.tarjeta{
+.tarjeta {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -125,55 +153,86 @@ h1{
     gap: 15px;
 }
 
-.tarjeta img{
+.tarjeta img {
     width: 95%;
     height: 300px;
     object-fit: cover;
     border-radius: 5px;
 }
 
-.tarjeta button{
+.tarjeta button {
     height: 50px;
     width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    background-color: #0e97bd;
+    color: white;
+
 }
 
-.tarjeta button img{
+.tarjeta button img {
     height: 80%;
     width: auto;
 }
 
-.descripcion-atarjeta{
+.descripcion-atarjeta {
     padding: 0 15px;
 }
 
 /*Donaciones*/
 .donaciones img,
-.equipo img{
+.equipo img {
     width: 100%;
 }
 
 /*Equipo*/
-.formulario-equipo{
+.formulario {
+    align-items: center;
+}
+
+.formulario-equipo {
     display: flex;
     flex-direction: column;
+    padding: 20px;
+    gap: 10px;
+    background-color: #f1dab9a1 ;
+    border-radius: 10px;
+    border: 1px solid #da993e;
+    
 }
 
-.item-formulario{
-    width: 100px;  
+.formulario-equipo span:last-of-type{
+    display: flex;
+    justify-content: center;
+}
+
+.formulario-equipo button {
+    background-color: #da993e;
+    color: white;
+    width: 50%;
+}
+
+.item-formulario {
+    width: 100px;
+}
+
+input[type="text"], input[type="email"]{
+    width: 70%;
+    border-radius: 5px;
+    background: #f7ddb9;
+    border: 1px solid #da993e;
 }
 
 
-@media(max-width: 992px){
-    .titulo-mapa{
+@media(max-width: 992px) {
+    .titulo-mapa {
         display: flex;
         flex-direction: column-reverse;
     }
 
-    .redes{
+    .redes {
         height: 80px;
         display: flex;
         justify-content: center;
