--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,3 @@
-/* General */
 main {
     display: flex;
     flex-direction: column;
@@ -11,16 +10,15 @@ h3 {
     text-align: center;
 }
 
-p {
-    color: black;
-    margin: 10px;
+p,
+span {
     font-size: 1.3em;
     font-family: "Raleway", serif;
 }
 
-span {
-    font-size: 1.3em;
-    font-family: "Raleway", serif;
+p {
+    color: black;
+    margin: 10px;
 }
 
 ol {
@@ -48,29 +46,33 @@ footer {
     display: flex;
     flex-direction: column;
     padding: 30px;
+
+    a {
+        color: black;
+        text-decoration: none;
+    }
 }
 
-footer a {
-    color: black;
-    text-decoration: none;
-}
-
-/*Menú*/
+/* Menú */
 .navbar-brand {
     background-color: #C6E7FF;
     display: flex;
     align-items: center;
     gap: 5px;
+
+    img {
+        height: 50px;
+        width: 50px;
+    }
+
+
 }
 
 nav.navbar.navbar-expand-lg.bg-body-tertiary {
     background-color: #C6E7FF !important;
 }
 
-.navbar-brand img {
-    height: 50px;
-    width: 50px;
-}
+
 
 .navbar-collapse {
     justify-content: center;
@@ -80,7 +82,7 @@ ul.navbar-nav {
     margin-right: 149.84px;
 }
 
-/*Header*/
+/* Header */
 header {
     background-color: #D4F6FF;
 }
@@ -96,8 +98,7 @@ h1 {
     text-align: center;
 }
 
-/*Inicio*/
-
+/* Inicio */
 .imagen-presentacion img,
 .mapa iframe {
     width: 100%;
@@ -116,26 +117,24 @@ h1 {
     background-color: #FFDDAE;
     width: fit-content;
     align-self: center;
-}
 
-.boton-inicio a,
-.boton-donaciones a {
-    color: black;
-    text-decoration: none;
+    a {
+        color: black;
+        text-decoration: none;
+    }
 }
-
 
 .redes {
     width: 100%;
     height: 150px;
+
+    a,
+    a img {
+        height: 100%;
+    }
 }
 
-.redes a,
-.redes a img {
-    height: 100%;
-}
-
-/*Adopciones y perdidos*/
+/* Adopciones y perdidos */
 .adopciones .row,
 .perdidos .row {
     gap: 20px;
@@ -151,43 +150,42 @@ h1 {
     padding: 30px;
     border-radius: 10px;
     gap: 15px;
+
+    img {
+        width: 95%;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+
+    button {
+        height: 50px;
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        background-color: #0e97bd;
+        color: white;
+
+        img {
+            height: 80%;
+            width: auto;
+        }
+    }
+
+    .descripcion-atarjeta {
+        padding: 0 15px;
+    }
 }
 
-.tarjeta img {
-    width: 95%;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 5px;
-}
-
-.tarjeta button {
-    height: 50px;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    background-color: #0e97bd;
-    color: white;
-
-}
-
-.tarjeta button img {
-    height: 80%;
-    width: auto;
-}
-
-.descripcion-atarjeta {
-    padding: 0 15px;
-}
-
-/*Donaciones*/
+/* Donaciones */
 .donaciones img,
 .equipo img {
     width: 100%;
 }
 
-/*Equipo*/
+/* Equipo */
 .formulario {
     align-items: center;
 }
@@ -197,34 +195,34 @@ h1 {
     flex-direction: column;
     padding: 20px;
     gap: 10px;
-    background-color: #f1dab9a1 ;
+    background-color: #f1dab9a1;
     border-radius: 10px;
     border: 1px solid #da993e;
-    
+
+    span:last-of-type {
+        display: flex;
+        justify-content: center;
+    }
+
+    button {
+        background-color: #da993e;
+        color: white;
+        width: 50%;
+    }
 }
 
-.formulario-equipo span:last-of-type{
-    display: flex;
-    justify-content: center;
-}
-
-.formulario-equipo button {
-    background-color: #da993e;
-    color: white;
-    width: 50%;
-}
 
 .item-formulario {
     width: 100px;
 }
 
-input[type="text"], input[type="email"]{
+input[type="text"],
+input[type="email"] {
     width: 70%;
     border-radius: 5px;
     background: #f7ddb9;
     border: 1px solid #da993e;
 }
-
 
 @media(max-width: 992px) {
     .titulo-mapa {
