--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,238 +1,243 @@
 @charset "UTF-8";
-
 main {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    margin: 40px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin: 40px 0;
 }
 
 h3 {
-    font-size: 30px;
-    text-align: center;
+  font-size: 30px;
+  text-align: center;
 }
 
 p,
 span {
-    font-size: 1.3em;
-    font-family: "Raleway", serif;
+  font-size: 1.3em;
+  font-family: "Raleway", serif;
 }
 
 p {
-    color: black;
-    margin: 10px;
+  color: #000000;
+  margin: 10px;
 }
 
 ol {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 article {
-    text-align: center;
-    font-size: 1.3em;
-    margin-bottom: 30px;
-}
-
-button {
-    border-radius: 5px !important;
-    padding: 10px;
-    font-weight: 600;
-    border: none;
+  text-align: center;
+  font-size: 1.3em;
+  margin-bottom: 30px;
 }
 
 footer {
-    text-align: center;
-    font-size: 20px;
-    background-color: #FFDDAE;
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
+  text-align: center;
+  font-size: 20px;
+  background-color: #FFDDAE;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
 }
-
 footer a {
-    color: black;
-    text-decoration: none;
+  color: #000000;
+  text-decoration: none;
 }
 
 /* Menú */
 .navbar-brand {
-    background-color: #C6E7FF;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+  background-color: #C6E7FF;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
-
 .navbar-brand img {
-    height: 50px;
-    width: 50px;
+  height: 50px;
+  width: 50px;
 }
 
 nav.navbar.navbar-expand-lg.bg-body-tertiary {
-    background-color: #C6E7FF !important;
+  background-color: #C6E7FF !important;
 }
 
 .navbar-collapse {
-    justify-content: center;
+  justify-content: center;
 }
 
 ul.navbar-nav {
-    margin-right: 149.84px;
+  margin-right: 149.84px;
 }
 
 /* Header */
 header {
-    background-color: #D4F6FF;
+  background-color: #D4F6FF;
 }
 
 .titulo {
-    font-weight: 500;
-    font-size: 28px;
-    text-align: center;
-    font-family: "Raleway", serif;
+  font-weight: 500;
+  font-size: 28px;
+  text-align: center;
+  font-family: "Raleway", serif;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
 /* Inicio */
 .imagen-presentacion img,
 .mapa iframe {
-    width: 100%;
-    border-radius: 10px;
+  width: 100%;
+  border-radius: 10px;
 }
 
 .texto-presentacion {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 .boton-inicio,
 .boton-donaciones {
-    background-color: #FFDDAE;
-    width: fit-content;
-    align-self: center;
+  width: fit-content;
+  align-self: center;
+  border-radius: 5px !important;
+  padding: 10px;
+  font-weight: 600;
+  border: none;
+  background-color: #FFDDAE;
+  color: black;
+  cursor: pointer;
 }
-
+.boton-inicio:hover,
+.boton-donaciones:hover {
+  opacity: 0.8;
+}
 .boton-inicio a,
 .boton-donaciones a {
-    color: black;
-    text-decoration: none;
+  color: #000000;
+  text-decoration: none;
 }
 
 .redes {
-    width: 100%;
-    height: 150px;
+  width: 100%;
+  height: 150px;
 }
-
 .redes a,
 .redes a img {
-    height: 100%;
+  height: 100%;
 }
 
 /* Adopciones y perdidos */
 .adopciones .row,
 .perdidos .row {
-    gap: 20px;
-    margin: 20px 0;
-    justify-content: center;
+  gap: 20px;
+  margin: 20px 0;
+  justify-content: center;
 }
 
 .tarjeta {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px;
-    border-radius: 10px;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px;
+  border-radius: 10px;
+  gap: 15px;
 }
-
 .tarjeta img {
-    width: 95%;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 5px;
+  width: 95%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 5px;
 }
-
 .tarjeta button {
-    height: 50px;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    background-color: #0e97bd;
-    color: white;
+  height: 50px;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 5px !important;
+  padding: 10px;
+  font-weight: 600;
+  border: none;
+  background-color: #0e97bd;
+  color: #ffffff;
+  cursor: pointer;
 }
-
+.tarjeta button:hover {
+  opacity: 0.8;
+}
 .tarjeta button img {
-    height: 80%;
-    width: auto;
+  height: 80%;
+  width: auto;
 }
-
 .tarjeta .descripcion-atarjeta {
-    padding: 0 15px;
+  padding: 0 15px;
 }
 
 /* Donaciones */
 .donaciones img,
 .equipo img {
-    width: 100%;
+  width: 100%;
 }
 
 /* Equipo */
 .formulario {
-    align-items: center;
+  align-items: center;
 }
 
 .formulario-equipo {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    gap: 10px;
-    background-color: rgba(241, 218, 185, 0.631372549);
-    border-radius: 10px;
-    border: 1px solid #da993e;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 10px;
+  background-color: rgba(241, 218, 185, 0.631372549);
+  border-radius: 10px;
+  border: 1px solid #da993e;
 }
-
 .formulario-equipo span:last-of-type {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-
 .formulario-equipo button {
-    background-color: #da993e;
-    color: white;
-    width: 50%;
+  width: 50%;
+  border-radius: 5px !important;
+  padding: 10px;
+  font-weight: 600;
+  border: none;
+  background-color: #da993e;
+  color: #ffffff;
+  cursor: pointer;
+}
+.formulario-equipo button:hover {
+  opacity: 0.8;
 }
 
 .item-formulario {
-    width: 100px;
+  width: 100px;
 }
 
 input[type=text],
 input[type=email] {
-    width: 70%;
-    border-radius: 5px;
-    background: #f7ddb9;
-    border: 1px solid #da993e;
+  width: 70%;
+  border-radius: 5px;
+  background: #f7ddb9;
+  border: 1px solid #da993e;
 }
 
 @media (max-width: 992px) {
-    .titulo-mapa {
-        display: flex;
-        flex-direction: column-reverse;
-    }
-
-    .redes {
-        height: 80px;
-        display: flex;
-        justify-content: center;
-    }
-}
-
-/*# sourceMappingURL=style.css.map */
+  .titulo-mapa {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .redes {
+    height: 80px;
+    display: flex;
+    justify-content: center;
+  }
+}/*# sourceMappingURL=style.css.map */
