--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,23 @@
+$encabezado-color: #C6E7FF;
+$naranja-color: #FFDDAE;
+$naranja-formulario: #da993e;
+$color-blanco: #ffffff;
+$color-negro: #000000;
+
+@mixin estilo-boton($naranja-color: #FFDDAE, $color-negro: black) {
+    border-radius: 5px !important;
+    padding: 10px;
+    font-weight: 600;
+    border: none;
+    background-color: $naranja-color;
+    color: $color-negro;
+    cursor: pointer;
+
+    &:hover {
+        opacity: 0.8; // Añadí un efecto de hover para que el botón se vea interactivo
+    }
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -17,7 +37,7 @@ span {
 }
 
 p {
-    color: black;
+    color: $color-negro;
     margin: 10px;
 }
 
@@ -32,30 +52,23 @@ article {
     margin-bottom: 30px;
 }
 
-button {
-    border-radius: 5px !important;
-    padding: 10px;
-    font-weight: 600;
-    border: none;
-}
-
 footer {
     text-align: center;
     font-size: 20px;
-    background-color: #FFDDAE;
+    background-color: $naranja-color;
     display: flex;
     flex-direction: column;
     padding: 30px;
 
     a {
-        color: black;
+        color: $color-negro;
         text-decoration: none;
     }
 }
 
 /* Menú */
 .navbar-brand {
-    background-color: #C6E7FF;
+    background-color: $encabezado-color;
     display: flex;
     align-items: center;
     gap: 5px;
@@ -69,7 +82,7 @@ footer {
 }
 
 nav.navbar.navbar-expand-lg.bg-body-tertiary {
-    background-color: #C6E7FF !important;
+    background-color: $encabezado-color !important;
 }
 
 
@@ -114,12 +127,12 @@ h1 {
 
 .boton-inicio,
 .boton-donaciones {
-    background-color: #FFDDAE;
     width: fit-content;
     align-self: center;
+    @include estilo-boton( $naranja-color);
 
     a {
-        color: black;
+        color: $color-negro;
         text-decoration: none;
     }
 }
@@ -165,8 +178,7 @@ h1 {
         align-items: center;
         justify-content: center;
         gap: 10px;
-        background-color: #0e97bd;
-        color: white;
+        @include estilo-boton(#0e97bd, #ffffff);
 
         img {
             height: 80%;
@@ -197,7 +209,7 @@ h1 {
     gap: 10px;
     background-color: #f1dab9a1;
     border-radius: 10px;
-    border: 1px solid #da993e;
+    border: 1px solid $naranja-formulario;
 
     span:last-of-type {
         display: flex;
@@ -205,9 +217,8 @@ h1 {
     }
 
     button {
-        background-color: #da993e;
-        color: white;
         width: 50%;
+        @include estilo-boton( $naranja-formulario, #ffffff);
     }
 }
 
@@ -221,7 +232,7 @@ input[type="email"] {
     width: 70%;
     border-radius: 5px;
     background: #f7ddb9;
-    border: 1px solid #da993e;
+    border: 1px solid $naranja-formulario;
 }
 
 @media(max-width: 992px) {
