--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,17 +4,40 @@ $naranja-formulario: #da993e;
 $color-blanco: #ffffff;
 $color-negro: #000000;
 
-@mixin estilo-boton($naranja-color: #FFDDAE, $color-negro: black) {
-    border-radius: 5px !important;
+%boton-base {
+    border-radius: 5px!important;
     padding: 10px;
     font-weight: 600;
     border: none;
-    background-color: $naranja-color;
-    color: $color-negro;
     cursor: pointer;
+    transition: opacity 0.3s ease;
 
     &:hover {
-        opacity: 0.8; // Añadí un efecto de hover para que el botón se vea interactivo
+        opacity: 0.8;
+    }
+}
+
+
+@mixin estilo-boton($naranja-color: #FFDDAE, $color-negro: black) {
+    @extend %boton-base; 
+    background-color: $naranja-color;
+    color: $color-negro;
+    transition: transform 0.3s ease; 
+    &:hover {
+        animation: escala-boton 0.5s ease-in-out; 
+    }
+
+}
+
+@keyframes escala-boton {
+    0% {
+        transform: scale(1); 
+    }
+    50% {
+        transform: scale(1.1); 
+    }
+    100% {
+        transform: scale(1); 
     }
 }
 
